fixed a few layout bugs

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -56,6 +56,7 @@ input[type="color"],
 
 #content-main{
   background: #ffffff url("/assets/background/linen-tile-trans.png"); 
+  position:relative;
 }
 
 #content-wrapper{
@@ -96,6 +97,7 @@ input[type="color"],
 	margin:8px auto;
 	border-radius: 10px;
 	color: #bbb;
+  clear:both;
 }
 
 #footer a, #header a{
